code cleanup: using Boolean.valueOf instead of Boolean constructor
git-svn-id: https://svn.code.sf.net/p/itext/code/trunk@2452 3a709846-db2a-4fbd-be0b-eb932eee6479