@@ -338,29 +338,29 @@ public class Table extends Rectangle implements Element, MarkupAttributes {
             columns = i;
         }
         if ((value = (String)attributes.remove(ElementTags.TABLEFITSPAGE)) != null) {
-            tableFitsPage = new Boolean(value).booleanValue();
+            tableFitsPage = Boolean.valueOf(value).booleanValue();
         }
         if ((value = (String)attributes.remove(ElementTags.CELLSFITPAGE)) != null) {
-            cellsFitPage = new Boolean(value).booleanValue();
+            cellsFitPage = Boolean.valueOf(value).booleanValue();
         }
         if ((value = (String)attributes.remove(ElementTags.CONVERT2PDFP)) != null) {
-            convert2pdfptable = new Boolean(value).booleanValue();
+            convert2pdfptable = Boolean.valueOf(value).booleanValue();
         }
         if ((value = (String)attributes.remove(ElementTags.BORDERWIDTH)) != null) {
             setBorderWidth(Float.parseFloat(value + "f"));
         }
         int border = 0;
         if ((value = (String)attributes.remove(ElementTags.LEFT)) != null) {
-            if (new Boolean(value).booleanValue()) border |= Rectangle.LEFT;
+            if (Boolean.valueOf(value).booleanValue()) border |= Rectangle.LEFT;
         }
         if ((value = (String)attributes.remove(ElementTags.RIGHT)) != null) {
-            if (new Boolean(value).booleanValue()) border |= Rectangle.RIGHT;
+            if (Boolean.valueOf(value).booleanValue()) border |= Rectangle.RIGHT;
         }
         if ((value = (String)attributes.remove(ElementTags.TOP)) != null) {
-            if (new Boolean(value).booleanValue()) border |= Rectangle.TOP;
+            if (Boolean.valueOf(value).booleanValue()) border |= Rectangle.TOP;
         }
         if ((value = (String)attributes.remove(ElementTags.BOTTOM)) != null) {
-            if (new Boolean(value).booleanValue()) border |= Rectangle.BOTTOM;
+            if (Boolean.valueOf(value).booleanValue()) border |= Rectangle.BOTTOM;
         }
         setBorder(border);
         String r = (String)attributes.remove(ElementTags.RED);
